
[package]
name = "nomina"
version = "0.0.3"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.85.1"

description = "Biased name generator"
readme = "README.md"
homepage = "https://github.com/RakuJa/nomina"
repository = "https://github.com/RakuJa/nomina"
license = "EUPL-1.2"
keywords = ["fantasy", "pathfinder", "name", "generator", "markov"]
publish = false

# build = "build/main.rs"

[lib]
name = "nomina"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
deprecated = "allow"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }

future_not_send = { level = "allow", priority = 2 }

pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }


[dependencies]
nanorand = "0.8.0"
capitalize = { version = "0.3.4", optional = true }
itertools = { version = "0.14.0", optional = true }

[dev-dependencies]
rstest = "0.25.0"

[features]
default = ["capitalizer"]
capitalizer = ["dep:capitalize", "dep:itertools"]
